js/js.translator/testData/incremental/invalidation/genericInlineFunctionsWithCrossModuleInliner/lib1/l1.1.kt
inline fun <T> foo(x: T) = 123
